--- a/Project-1.ipynb
+++ b/Project-1.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c3a92a6",
+   "id": "f4870064",
    "metadata": {},
    "source": [
-    "   ### Importing required libraries to work with postgreSQL and to perform exploratory data analysis"
+    "## Creating database and building tables with python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c3d524c",
+   "metadata": {},
+   "source": [
+    "   ### Importing required libraries to work with PostgreSQL and to perform exploratory data analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 718,
-   "id": "b311838e",
+   "id": "2e290db8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7594fb8a",
+   "id": "41202068",
    "metadata": {},
    "source": [
     "### Creating a function for creating a database and setting connection without the need to run the whole code everytime in the future"
@@ -30,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 719,
-   "id": "f272c64b",
+   "id": "707aa52a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d221ffda",
+   "id": "a708571c",
    "metadata": {},
    "source": [
     "### Creating a function to drop tables from database"
@@ -67,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 720,
-   "id": "c4c5969b",
+   "id": "9187de16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36eb9ff9",
+   "id": "2d90ff12",
    "metadata": {},
    "source": [
     "### Creating a function to create tables in database"
@@ -88,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 721,
-   "id": "2e919228",
+   "id": "78ac37e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f6cb0d0",
+   "id": "d501656d",
    "metadata": {},
    "source": [
     "### Reading csv file and assigning the dataframe to the variable"
@@ -109,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 722,
-   "id": "c9a00e8b",
+   "id": "86ddba9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 723,
-   "id": "57e99539",
+   "id": "b17f250f",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 724,
-   "id": "3333fa23",
+   "id": "7dbf9eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 725,
-   "id": "3d5a4047",
+   "id": "fc08472f",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 726,
-   "id": "1c46c3e1",
+   "id": "1d70c0dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 727,
-   "id": "79cd4214",
+   "id": "51daf8cb",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 728,
-   "id": "9160fe5c",
+   "id": "9a818aa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 729,
-   "id": "2388c117",
+   "id": "b7ded424",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 730,
-   "id": "cd135482",
+   "id": "0aa2b46a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 731,
-   "id": "bf0aee2a",
+   "id": "2396d1d6",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 732,
-   "id": "f370ff03",
+   "id": "b5966ffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 733,
-   "id": "c85c00c4",
+   "id": "85941e89",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 734,
-   "id": "ac7cbccf",
+   "id": "56d945cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 735,
-   "id": "850b39c9",
+   "id": "9b221aef",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 736,
-   "id": "312e27c7",
+   "id": "c150f723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 737,
-   "id": "33ef62d9",
+   "id": "4ec99897",
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 738,
-   "id": "4bbde24e",
+   "id": "ff86cb5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 739,
-   "id": "98f4522a",
+   "id": "65a98ced",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 740,
-   "id": "37196ec6",
+   "id": "20b1fa17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 741,
-   "id": "45b9ecd0",
+   "id": "069cff56",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 742,
-   "id": "fb87cc6b",
+   "id": "766acb9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 743,
-   "id": "66e9b432",
+   "id": "98cdd2dd",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f062778",
+   "id": "c9ba2b31",
    "metadata": {},
    "source": [
     "### Calling the function to create database"
@@ -1347,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 744,
-   "id": "6772475c",
+   "id": "2d467e38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a729a2fb",
+   "id": "39d0dc22",
    "metadata": {},
    "source": [
     "### Defining an SQL query to create a table and executing it using cursor object"
@@ -1365,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 745,
-   "id": "97821f11",
+   "id": "0b425584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 746,
-   "id": "ec8ee60c",
+   "id": "b0f2b0c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 747,
-   "id": "05c94140",
+   "id": "a5587950",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 748,
-   "id": "589fe8ef",
+   "id": "5d249313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": 749,
-   "id": "527c1c21",
+   "id": "57484f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 750,
-   "id": "ea03fac6",
+   "id": "f7df7f7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 751,
-   "id": "1a8da3c5",
+   "id": "3b606570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 752,
-   "id": "876234df",
+   "id": "5e030d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 753,
-   "id": "a4ceeb28",
+   "id": "7d5ff88c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 754,
-   "id": "157a812f",
+   "id": "8a7e4bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e2e565",
+   "id": "94235bd4",
    "metadata": {},
    "source": [
     "### Defining an SQL query to insert data into a table"
@@ -1554,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 755,
-   "id": "c7f0db78",
+   "id": "be91db8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78c8ba98",
+   "id": "b6dda220",
    "metadata": {},
    "source": [
     "### Executing the query by looping through each row in the dataframe and inserting the row's values in the table"
@@ -1575,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 756,
-   "id": "5f5472cf",
+   "id": "a8053b4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 757,
-   "id": "89d31c24",
+   "id": "9a756ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": 758,
-   "id": "f4f187fa",
+   "id": "a44c5af6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1612,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": 759,
-   "id": "d7482a40",
+   "id": "6c38f14f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 760,
-   "id": "fb671157",
+   "id": "5c47ac9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 761,
-   "id": "be362b18",
+   "id": "94471552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": 762,
-   "id": "9b9eb018",
+   "id": "a83912ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1673,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 763,
-   "id": "66ee9fea",
+   "id": "d6a40866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 764,
-   "id": "db54b804",
+   "id": "fe2a59a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": 765,
-   "id": "aa8ae6dd",
+   "id": "aad0692d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 766,
-   "id": "ef254755",
+   "id": "8b506d39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": 767,
-   "id": "78dbd5ca",
+   "id": "79353ac9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 768,
-   "id": "025f1bbd",
+   "id": "38f072b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": 769,
-   "id": "3ad077ba",
+   "id": "eea56833",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 770,
-   "id": "0a8581a4",
+   "id": "2d31fb01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": 771,
-   "id": "27c8f5ed",
+   "id": "af6491e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1812,7 @@
   {
    "cell_type": "code",
    "execution_count": 772,
-   "id": "f5e9f13c",
+   "id": "e01f1053",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1824,7 @@
   {
    "cell_type": "code",
    "execution_count": 773,
-   "id": "ea2cce5b",
+   "id": "976d2de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1829,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 774,
-   "id": "63e7abb7",
+   "id": "c08880c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28682075",
+   "id": "ac8f63a7",
    "metadata": {},
    "source": [
     "###  Validating whether our data was inserted into the table using select statement"
@@ -1849,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 775,
-   "id": "83160773",
+   "id": "c6253dab",
    "metadata": {},
    "outputs": [
     {
@@ -1880,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": 776,
-   "id": "fd2a1651",
+   "id": "e16a1ae8",
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d3f6c6",
+   "id": "d0afedd6",
    "metadata": {},
    "source": [
     "###### We can see that the data has been inserted into the tables successfully"
@@ -1943,7 +1951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e8330d",
+   "id": "e1403c58",
    "metadata": {},
    "source": [
     "### Finally we close the database connection"
@@ -1952,7 +1960,7 @@
   {
    "cell_type": "code",
    "execution_count": 777,
-   "id": "b2caae56",
+   "id": "f81f0937",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +1970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da00519",
+   "id": "04d152ed",
    "metadata": {},
    "source": [
     "###### Hence I have completed the project which helped me to learn about connecting to the PostgreSQL database, creating databases and executing SQL  queries on the database using python."
@@ -1971,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ca3a25",
+   "id": "0c371406",
    "metadata": {},
    "outputs": [],
    "source": []
